<resources>
    <string name="app_name">MexicanPlaces RF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statue">Estado</string>
    <string name="state">state</string>
    <string name="update">Actualizacion</string>
    <string name="attractions">Atractivos turísticos</string>
    <string name="last_update">"Última actualización"</string>
    <string name="dish">Platillo típico</string>
    <string name="conection_error">Hubo un error de conexión</string>
    <string name="image_error">Imagen de error</string>
    <string name="reload">Reintentar</string>
    <string name="pause">Silenciar música</string>
    <string name="play">Oir música</string>
    <string name="back">Regresar</string>
    <string name="recover_password">Restablecer contraseña</string>
    <string name="register">Registrarse</string>
    <string name="login">Ingresar</string>
    <string name="pasword">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="email_user">usuario</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user_legend">"Usuario: "</string>
    <string name="send_email_verif">Reenviar correo de verificación</string>
    <string name="email_not_verif">no verificado</string>
    <string name="wellcome">¡Bienvenido!</string>
    <string name="my_location">Mi ubicación</string>
    <string name="here_is">Aquí mero es </string>
    <string name="view_map">Ver en el mapa</string>
    <string name="exit_title">Salir de la aplicación</string>
    <string name="ask_exit">¿Deseas salir de Mexican Palces?</string>
    <string name="yes_answer">Sí</string>
    <string name="cancel">Cancelar</string>
    <string name="email_not_sent">No se pudo enviar el correo</string>
    <string name="closed_session">Sesión cerrada exitosamente</string>
    <string name="email_required">Se requiere el correo</string>
    <string name="invalid_email">El correo no tiene un formato válido</string>
    <string name="password_required">Se requiere una contraseña</string>
    <string name="pass_length_error">La contraseña debe tener al menos 6 caracteres</string>
    <string name="incorrect_email_format">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="invalid_pass">Error: La contraseña no es válida</string>
    <string name="email_alredy_exist">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="used_email">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="expired_session">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="invalid_user">Error: No existe el usuario con la información proporcionada.</string>
    <string name="invalid_password">La contraseña porporcionada es inválida</string>
    <string name="length_password">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="net_not_avilable">Red no disponible o se interrumpió la conexión</string>
    <string name="not_succes_auth">Error. No se pudo autenticar exitosamente.</string>
    <string name="succes_auth">Autenticacion exotosa</string>
    <string name="verification_mail_sent">El correo de verificación fue enviado</string>
    <string name="verification_mail_notsent">No se pudo enviar el correo de verificación</string>
    <string name="success_registration">Registro exotoso</string>
    <string name="set_recover_email">Ingrese su correo para restablecer y se le enviará un mensaje</string>
    <string name="send">Enviar</string>
    <string name="recover_link">El enlace para restablecer paswor se envió exitosamente</string>
    <string name="request_not_sent">No se ha podido enviar la petición</string>
    <string name="request_valid_email">Ingrese un correo válido</string>

</resources>